# Rhodi

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  readme.md
core/: Cargo.toml
core/examples/: core-examples.rs
core/src/: compiler.rs  crypto.rs  error.rs  extraction.rs  lib.rs  lib.rs.txt  main.rs  markdown.rs  models.rs  resolver.rs  version.rs
core/src/cli/: keys.rs  mod.rs
core/src/cli/commands/: init.rs  keygen.rs  mod.rs  seal.rs  status.rs  update.rs  verify.rs
specs/: architecture.md  concept.md  include_protocol.md  sample_file.tmd  schema.json  trace_protocol.md  versioning.md
