[package]
name = "rhodi-core"
version = "0.1.0"
edition = "2024"
description = "A ledger of truth for research documents - Trace Protocol implementation"
authors = ["Dimitri Berti <dimitriberti@gmail.com>"]
repository = "https://github.com/dimitriberti/rhodi"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "2.0"
regex = "1.10"
jsonpath-rust = "0.3.5"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
markdown = "1.0.0"
markdown-frontmatter = "0.4.0"
rand = "0.8"
serde = "1.0.228"
serde_json = "1.0"
serde_norway = "0.9.42"
sha2 = "0.10.9"
tokio = "1.48.0"
uuid = { version = "1.19.0", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5"

[[bin]]
name = "rhodi"
path = "src/main.rs"


